<package format="2">
  <name>ldlidar</name>
  <version>0.0.1</version>
  <description>The ldlidar package</description>

  <maintainer email="jnugen@gmail.com">James Nugen</maintainer>
  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/ldlidar</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

<!--
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
-->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

<!--
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
